[package]
name = "chatgpt-proxy-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rocket = "0.5.0-rc.2"
reqwest = "0.11"
lazy_static = "1.4.0"
dotenv = "0.15.0"
hyper-tls = "0.5.0"